--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" href="images/favicon.ico" />
+  <link rel="shortcut icon" href="images/favicon.png" />
   <title>Visual Studio Code - 快捷键参考</title>
   <style>
   * {
@@ -25,8 +25,8 @@
 
   .keyboard-shortcuts {
     padding: 30px 25px;
-    column-count: 3;  
-    column-gap: 50px;  
+    column-count: 3;
+    column-gap: 50px;
   }
 
   .keyboard-shortcuts .shortcuts-header {
@@ -113,19 +113,19 @@
   <div class="description">
     <p title="Other operating systems’ keyboard shortcuts and additional unassigned shortcuts available at aka.ms/vscodekeybindings">
       其他操作系统的键盘快捷键和其他未分配的快捷方式可在
-      <a href="http://aka.ms/vscodekeybindings">aka.ms/vscodekeybindings</a>
+      <a href="https://aka.ms/vscodekeybindings" target="_blank">aka.ms/vscodekeybindings</a>
       获得。
     </p>
   </div>
 </div>
 
-<script src="//lib.baomitu.com/jquery/2.2.4/jquery.min.js"></script>
-<script src="//lib.baomitu.com/vue/2.3.4/vue.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.min.js"></script>
 <script>
 var app = new Vue({
   el: '#app',
   data: {
-    active: 'mac',
+    active: 'win',
     platforms: {
       mac: {},
       win: {},
